[package]
name = "tcp-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "mysql"] }
